style: Fix breadcrumb style on mobile

--- a/scss/styles.base.scss
+++ b/scss/styles.base.scss
@@ -62,19 +62,22 @@ body {
       width: 100%;
       z-index: 1000;
       #breadcrumb {
-        padding: 10px 40px 16px;
         list-style: none;
         background-color: #eee;
         font-size: 17px;
         margin: 0;
-        width: calc(50% - 80px);
+        width: 100%;
+        height: 40px;
+        padding: 0;
+        padding-left: 35px;
 
         li {
           display: inline;
-
           a {
             color: #0275d8;
             text-decoration: none;
+            padding: 10px;
+            line-height: 40px;
 
             &:hover {
               color: #01447e;
